{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 1374,
  "lineage": "d617caf9-0041-16d0-8f8b-f94e7a693473",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "awesome-loadbalancer-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d6261f62eb3ba96",
            "arn": "arn:aws:ec2:us-east-1:637423521175:elastic-ip/eipalloc-03d6261f62eb3ba96",
            "association_id": "eipassoc-0b9968461def08f4c",
            "domain": "vpc",
            "id": "eipalloc-03d6261f62eb3ba96",
            "instance": "i-09b51b6cc902243cf",
            "network_border_group": "us-east-1",
            "network_interface": "eni-028c6c8d1574e5991",
            "private_dns": "ip-10-240-2-126.ec2.internal",
            "private_ip": "10.240.2.126",
            "public_dns": "ec2-98-83-253-36.compute-1.amazonaws.com",
            "public_ip": "98.83.253.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "VIR-PRD-NGW-2A-EIP"
            },
            "tags_all": {
              "Name": "VIR-PRD-NGW-2A-EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.loadbalancer",
            "aws_security_group.bastion_security",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vir-vpc",
            "data.aws_ami.amzlinux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "awesome-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fdb07eefab03b8ea",
            "arn": "arn:aws:ec2:us-east-1:637423521175:elastic-ip/eipalloc-0fdb07eefab03b8ea",
            "domain": "vpc",
            "id": "eipalloc-0fdb07eefab03b8ea",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-50-16-159-129.compute-1.amazonaws.com",
            "public_ip": "50.16.159.129",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "VIR-PRD-NGW-2C-EIP"
            },
            "tags_all": {
              "Name": "VIR-PRD-NGW-2C-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-master-node1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ceb6b6dca8ff42f",
            "arn": "arn:aws:ec2:us-east-1:637423521175:instance/i-07b1f36cb6a9b7f03",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07b1f36cb6a9b7f03",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ad53b233d5acabfc",
            "private_dns": "ip-10-240-1-237.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.240.1.237",
            "public_dns": "ec2-52-91-63-115.compute-1.amazonaws.com",
            "public_ip": "52.91.63.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fd7fd38835c06be7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b0daa8bbfcd0ab9e",
            "tags": {
              "Name": "VIR-K8S-MASTER-NODE1"
            },
            "tags_all": {
              "Name": "VIR-K8S-MASTER-NODE1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d63c81011cd42ff4"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_security",
            "aws_subnet.pub_sub_a",
            "aws_vpc.vir-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-master-node2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ceb6b6dca8ff42f",
            "arn": "arn:aws:ec2:us-east-1:637423521175:instance/i-0b8469a55363a699c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b8469a55363a699c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00c878093a3c18c40",
            "private_dns": "ip-10-240-1-247.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.240.1.247",
            "public_dns": "ec2-3-93-242-142.compute-1.amazonaws.com",
            "public_ip": "3.93.242.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01b59687ae5aeb678",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b0daa8bbfcd0ab9e",
            "tags": {
              "Name": "VIR-K8S-MASTER-NODE2"
            },
            "tags_all": {
              "Name": "VIR-K8S-MASTER-NODE2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d63c81011cd42ff4"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_security",
            "aws_subnet.pub_sub_a",
            "aws_vpc.vir-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-master-node3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ceb6b6dca8ff42f",
            "arn": "arn:aws:ec2:us-east-1:637423521175:instance/i-04ff0e5b094147321",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04ff0e5b094147321",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b307580c6c84948d",
            "private_dns": "ip-10-240-1-228.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.240.1.228",
            "public_dns": "ec2-44-207-0-28.compute-1.amazonaws.com",
            "public_ip": "44.207.0.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01ffcb18bcf4735d1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b0daa8bbfcd0ab9e",
            "tags": {
              "Name": "VIR-K8S-MASTER-NODE3"
            },
            "tags_all": {
              "Name": "VIR-K8S-MASTER-NODE3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d63c81011cd42ff4"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_security",
            "aws_subnet.pub_sub_a",
            "aws_vpc.vir-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-worker-node1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ceb6b6dca8ff42f",
            "arn": "arn:aws:ec2:us-east-1:637423521175:instance/i-0dd62d4375c447471",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd62d4375c447471",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d5fa3442fecbce69",
            "private_dns": "ip-10-240-2-74.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.240.2.74",
            "public_dns": "ec2-107-23-223-141.compute-1.amazonaws.com",
            "public_ip": "107.23.223.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-025d5bcc3cd136792",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0751950be60062b92",
            "tags": {
              "Name": "VIR-K8S-WORKER-NODE1"
            },
            "tags_all": {
              "Name": "VIR-K8S-WORKER-NODE1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d63c81011cd42ff4"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_security",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vir-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-worker-node2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ceb6b6dca8ff42f",
            "arn": "arn:aws:ec2:us-east-1:637423521175:instance/i-0b86728087c350dbb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b86728087c350dbb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04747d911246efe5f",
            "private_dns": "ip-10-240-2-184.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.240.2.184",
            "public_dns": "ec2-3-94-4-112.compute-1.amazonaws.com",
            "public_ip": "3.94.4.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-000174231c64db56f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0751950be60062b92",
            "tags": {
              "Name": "VIR-K8S-WORKER-NODE2"
            },
            "tags_all": {
              "Name": "VIR-K8S-WORKER-NODE2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d63c81011cd42ff4"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_security",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vir-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-worker-node3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ceb6b6dca8ff42f",
            "arn": "arn:aws:ec2:us-east-1:637423521175:instance/i-07031e6e7d37ca07a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07031e6e7d37ca07a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-023f133245ae73967",
            "private_dns": "ip-10-240-2-24.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.240.2.24",
            "public_dns": "ec2-34-228-216-172.compute-1.amazonaws.com",
            "public_ip": "34.228.216.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0311db58d9c673b3e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0751950be60062b92",
            "tags": {
              "Name": "VIR-K8S-WORKER-NODE3"
            },
            "tags_all": {
              "Name": "VIR-K8S-WORKER-NODE3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d63c81011cd42ff4"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_security",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vir-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e54eba7c51c234f6",
            "arn": "arn:aws:ec2:us-east-1:637423521175:instance/i-09b51b6cc902243cf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b51b6cc902243cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "yoowonjongkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-028c6c8d1574e5991",
            "private_dns": "ip-10-240-2-126.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.240.2.126",
            "public_dns": "ec2-3-80-234-226.compute-1.amazonaws.com",
            "public_ip": "3.80.234.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-043cad262c5b5fd39",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0751950be60062b92",
            "tags": {
              "Name": "VIR-K8S-LOADBALANCER"
            },
            "tags_all": {
              "Name": "VIR-K8S-LOADBALANCER"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d63c81011cd42ff4"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_security",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vir-vpc",
            "data.aws_ami.amzlinux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423521175:internet-gateway/igw-09bcf2ad44c2ab266",
            "id": "igw-09bcf2ad44c2ab266",
            "owner_id": "637423521175",
            "tags": {
              "Name": "VIR-PRD-IGW"
            },
            "tags_all": {
              "Name": "VIR-PRD-IGW"
            },
            "vpc_id": "vpc-0689898177ff9bcbd"
          },
          "dependencies": [
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "awesome-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fdb07eefab03b8ea",
            "association_id": "eipassoc-0a12b0159798b9878",
            "connectivity_type": "public",
            "id": "nat-09fbe8d370c3c541e",
            "network_interface_id": "eni-00d5b71574956a4bf",
            "private_ip": "10.240.2.171",
            "public_ip": "50.16.159.129",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0751950be60062b92",
            "tags": {
              "Name": "VIR-PRD-NGW-2A"
            },
            "tags_all": {
              "Name": "VIR-PRD-NGW-2A"
            }
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423521175:route-table/rtb-00553a0b9263e78c0",
            "id": "rtb-00553a0b9263e78c0",
            "owner_id": "637423521175",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09fbe8d370c3c541e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VIR-PRD-RT-PRI-2A"
            },
            "tags_all": {
              "Name": "VIR-PRD-RT-PRI-2A"
            },
            "timeouts": null,
            "vpc_id": "vpc-0689898177ff9bcbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri_rt_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423521175:route-table/rtb-0ed607d0f4c9db257",
            "id": "rtb-0ed607d0f4c9db257",
            "owner_id": "637423521175",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09fbe8d370c3c541e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VIR-PRD-RT-PRI-2C"
            },
            "tags_all": {
              "Name": "VIR-PRD-RT-PRI-2C"
            },
            "timeouts": null,
            "vpc_id": "vpc-0689898177ff9bcbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423521175:route-table/rtb-0479b99cfc296f830",
            "id": "rtb-0479b99cfc296f830",
            "owner_id": "637423521175",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09bcf2ad44c2ab266",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VIR-PRD-RT-PUB"
            },
            "tags_all": {
              "Name": "VIR-PRD-RT-PUB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0689898177ff9bcbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_pri_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cb71b277ef9f73c",
            "route_table_id": "rtb-00553a0b9263e78c0",
            "subnet_id": "subnet-0f868841977f7da13"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_a",
            "aws_subnet.db_sub_a",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_pri_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093d4621002ec91a8",
            "route_table_id": "rtb-0ed607d0f4c9db257",
            "subnet_id": "subnet-05d3b94d5ae3bda6e"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_c",
            "aws_subnet.db_sub_c",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mgnt_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08598da51810dfb10",
            "route_table_id": "rtb-00553a0b9263e78c0",
            "subnet_id": "subnet-01c250a4c1b12136b"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_a",
            "aws_subnet.mgnt_sub_a",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mgnt_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f03385d2dda5817",
            "route_table_id": "rtb-0ed607d0f4c9db257",
            "subnet_id": "subnet-0040c70dd78fce07e"
          },
          "dependencies": [
            "aws_eip.awesome-nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.awesome-nat",
            "aws_route_table.pri_rt_c",
            "aws_subnet.mgnt_sub_c",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018e745b955bd2972",
            "route_table_id": "rtb-0479b99cfc296f830",
            "subnet_id": "subnet-0b0daa8bbfcd0ab9e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_rt",
            "aws_subnet.pub_sub_a",
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b97e5c6f86445e5c",
            "route_table_id": "rtb-0479b99cfc296f830",
            "subnet_id": "subnet-0751950be60062b92"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_rt",
            "aws_subnet.pub_sub_c",
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423521175:security-group/sg-0d63c81011cd42ff4",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d63c81011cd42ff4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "VIR-PRD-VPC-BASTION-PUB-SG-2A",
            "name_prefix": "",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VIR-PRD-VPC-BASTION-PUB-SG-2A"
            },
            "tags_all": {
              "Name": "VIR-PRD-VPC-BASTION-PUB-SG-2A"
            },
            "timeouts": null,
            "vpc_id": "vpc-0689898177ff9bcbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423521175:security-group/sg-0bc76a36c0be00b10",
            "description": "Allow db inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc76a36c0be00b10",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "VIR-PRD-PRI-DB-SG20240930023748136600000003",
            "name_prefix": "VIR-PRD-PRI-DB-SG",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VIR-PRD-PRI-DB-SG"
            },
            "tags_all": {
              "Name": "VIR-PRD-PRI-DB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0689898177ff9bcbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dms_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423521175:security-group/sg-08c373427c40b7740",
            "description": "Allow db inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c373427c40b7740",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "VIR-PRD-PRI-DMS-SG20240930023750791000000004",
            "name_prefix": "VIR-PRD-PRI-DMS-SG",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VIR-PRD-PRI-DB-SG"
            },
            "tags_all": {
              "Name": "VIR-PRD-PRI-DB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0689898177ff9bcbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423521175:security-group/sg-05844911c274fd3c1",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05844911c274fd3c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "VIR-PRD-EFS-SG",
            "name_prefix": "",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VIR-PRD-EFS-SG"
            },
            "tags_all": {
              "Name": "VIR-PRD-EFS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0689898177ff9bcbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423521175:security-group/sg-0291f836c235debd1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0291f836c235debd1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "EFS_SG",
            "name_prefix": "",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0689898177ff9bcbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423521175:security-group/sg-00ab43d1fe4964643",
            "description": "Allow ALL traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ab43d1fe4964643",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALL traffic from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "jenkins",
            "name_prefix": "",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "awesome-jenkins-sg"
            },
            "tags_all": {
              "Name": "awesome-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0689898177ff9bcbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423521175:security-group/sg-05b7c5d9aef047734",
            "description": "Allow HTTP,HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b7c5d9aef047734",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "VIR-PRD-VPC-PRI-SG",
            "name_prefix": "",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VIR-PRD-VPC-PRI-SG"
            },
            "tags_all": {
              "Name": "VIR-PRD-VPC-PRI-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0689898177ff9bcbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423521175:security-group/sg-05e8bdefa30908aa3",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e8bdefa30908aa3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "VIR-PRD-REDIS-SG",
            "name_prefix": "",
            "owner_id": "637423521175",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VIR-PRD-REDIS-SG"
            },
            "tags_all": {
              "Name": "VIR-PRD-REDIS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0689898177ff9bcbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423521175:subnet/subnet-0f868841977f7da13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.240.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f868841977f7da13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VIR-DB-SUB-2A"
            },
            "tags_all": {
              "Name": "VIR-DB-SUB-2A"
            },
            "vpc_id": "vpc-0689898177ff9bcbd"
          },
          "dependencies": [
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423521175:subnet/subnet-05d3b94d5ae3bda6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.240.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d3b94d5ae3bda6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VIR-DB-SUB-2C"
            },
            "tags_all": {
              "Name": "VIR-DB-SUB-2C"
            },
            "vpc_id": "vpc-0689898177ff9bcbd"
          },
          "dependencies": [
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mgnt_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423521175:subnet/subnet-01c250a4c1b12136b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.240.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c250a4c1b12136b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VIR-MGNT-SUB-2A"
            },
            "tags_all": {
              "Name": "VIR-MGNT-SUB-2A"
            },
            "vpc_id": "vpc-0689898177ff9bcbd"
          },
          "dependencies": [
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mgnt_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423521175:subnet/subnet-0040c70dd78fce07e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.240.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0040c70dd78fce07e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VIR-MGNT-SUB-2C"
            },
            "tags_all": {
              "Name": "VIR-MGNT-SUB-2C"
            },
            "vpc_id": "vpc-0689898177ff9bcbd"
          },
          "dependencies": [
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423521175:subnet/subnet-06f272746ccb562f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.240.52.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f272746ccb562f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VIR-PRD-VPC-PRI-2A"
            },
            "tags_all": {
              "Name": "VIR-PRD-VPC-PRI-2A"
            },
            "vpc_id": "vpc-0689898177ff9bcbd"
          },
          "dependencies": [
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423521175:subnet/subnet-0c6114b7a5f90cd51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.240.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6114b7a5f90cd51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VIR-PRD-VPC-PRI-2A"
            },
            "tags_all": {
              "Name": "VIR-PRD-VPC-PRI-2A"
            },
            "vpc_id": "vpc-0689898177ff9bcbd"
          },
          "dependencies": [
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423521175:subnet/subnet-0785896bf99631d6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.240.51.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0785896bf99631d6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VIR-PRD-VPC-PRI-2C"
            },
            "tags_all": {
              "Name": "VIR-PRD-VPC-PRI-2C"
            },
            "vpc_id": "vpc-0689898177ff9bcbd"
          },
          "dependencies": [
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423521175:subnet/subnet-0b0daa8bbfcd0ab9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.240.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0daa8bbfcd0ab9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VIR-PRD-VPC-BASTION-PUB-2A"
            },
            "tags_all": {
              "Name": "VIR-PRD-VPC-BASTION-PUB-2A"
            },
            "vpc_id": "vpc-0689898177ff9bcbd"
          },
          "dependencies": [
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423521175:subnet/subnet-0751950be60062b92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.240.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0751950be60062b92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423521175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VIR-PRD-VPC-PUB-2C"
            },
            "tags_all": {
              "Name": "VIR-PRD-VPC-PUB-2C"
            },
            "vpc_id": "vpc-0689898177ff9bcbd"
          },
          "dependencies": [
            "aws_vpc.vir-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vir-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423521175:vpc/vpc-0689898177ff9bcbd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.240.0.0/16",
            "default_network_acl_id": "acl-0d6d35bc4c77cfb36",
            "default_route_table_id": "rtb-067e693dd046ed4fa",
            "default_security_group_id": "sg-067745778da166985",
            "dhcp_options_id": "dopt-0e7a846e6207b3393",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0689898177ff9bcbd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-067e693dd046ed4fa",
            "owner_id": "637423521175",
            "tags": {
              "Name": "VIR-PRD-VPC"
            },
            "tags_all": {
              "Name": "VIR-PRD-VPC"
            }
          }
        }
      ]
    }
  ]
}